fixes link alignment

--- a/src/components/map-components/Map.scss
+++ b/src/components/map-components/Map.scss
@@ -44,7 +44,6 @@
             color:white;
             text-decoration:none;
             padding:10px 0px;
-            padding-left:10%;
             margin: 10px 0px;
             text-align:left;
             width:100%;
@@ -76,15 +75,11 @@
         .autofill-option {
             list-style-type: none;
             margin: 0;
-            
             padding:2px;            
             background:white;
             color:black;         
             border: 1px solid grey;
             font-size: .9rem;
-            
-
-
         }
     }
 
